--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,18 @@ kubernetes = "^10.0"
 [tool.poetry.dev-dependencies]
 pytest-black = "^0.3.7"
 pytest-isort = "^0.3.1"
+pytest-cov = "^2.8"
 
 [tool.poetry.scripts]
-ksnyk = "ksnyk:ksnyk"
+ksnyk = "main:cli"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+combine_as_imports = true
+line_length = 88
