--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pytest-cov = "^2.8"
 
 [tool.poetry.scripts]
 ksnyk = "main:cli"
+kubectl-snyk = "main:cli"
 
 [build-system]
 requires = ["poetry>=0.12"]
